--- a/乐视官方轮番图/dome.html
+++ b/乐视官方轮番图/dome.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>乐视效果</title>
-	<script type="text/javascript" src="../jQuery/jquery-2.1.1.min.js"></script>
+	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<style type="text/css">
 		body,div{
