--- a/乐视官方轮番图/dome.html
+++ b/乐视官方轮番图/dome.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>乐视效果</title>
-	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
-	<script type="text/javascript" src="script.js"></script>
+	<!-- // <script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script> -->
+
 	<style type="text/css">
 		body,div{
 			margin:0;
@@ -179,5 +179,7 @@
 		</div>
 	</div>	
 </div>
+<script src="jquery-2.1.4.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
