--- a/圣诞雪花/chrimas.html
+++ b/圣诞雪花/chrimas.html
@@ -5,7 +5,7 @@
 	<title>圣诞雪花</title>
 	<style>
 	body{
-		background:url(D:/js/圣诞雪花/Disneyland.jpg) no-repeat center 0 #000;
+		background:url(Disneyland.jpg) no-repeat center 0 #000;
 		background-size: 100%;
 	}
 	.snow-size{
