--- a/百度音乐特效/demo.html
+++ b/百度音乐特效/demo.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>baidu music effect</title>
 	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+	<script src="jquery-2.1.1.min.js"></script>
 	<style type="text/css">
 	body,div,h2{
 		padding:0;
